CSS: fixing issues with overlapping in sidebar

--- a/templates/public_voit.scss
+++ b/templates/public_voit.scss
@@ -16,17 +16,19 @@ $darkaquablue: #004977;
 $lightyellow: #fffff0;
 
 .middle_section_narrow {
+    margin-left: auto;
+    margin-right: auto;
     max-width: 40em;
-    margin-left: 10em;
 }
 
 .middle_section_wide {
+    margin-left: auto;
+    margin-right: auto;
     max-width: 60em;
-    margin-left: 10em;
 }
 
 header {
-    @extend .middle_section_wide
+    @extend .middle_section_wide;
 }
 
 body {
@@ -139,7 +141,12 @@ footer {
 }
 
 .article-header-nav {
+    @extends header;
     padding: 1em;
+/*    padding-left: 13em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    padding-right: 1em;*/
     border-radius: 1em;
     box-shadow: inset 0 2px 0 rgba(188, 147, 200, 0.7), -5px -4px 25px rgba(0, 0, 0, 0.3);
     background: $verylightgrey;
@@ -235,6 +242,10 @@ footer {
  *  Permanent page
  *  ------------------------------------------ */
 
+.persistent-header {
+    @extend header;
+}
+
 .persistent-body {
     margin-left: auto;
     margin-right: auto;
@@ -290,7 +301,6 @@ footer {
 	list-style-image: none;
 	margin-left: -2em;
 	padding: 10px 0px 5px 0px;
-	float: left;
     }
 }
 
